fixed multiple css warnings pertaining to ul elements having divs and a hrefs as children elements, also added positioning to footer and overflow hidden to prevent the footer from climbing up the page as you scroll down quickly

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -3,8 +3,11 @@ footer {
   width: 100%;
   background: linear-gradient(#1b2735 0%, #090a0f);
   /* margin-top: 150px; */
+  bottom: 0;
+  left: 0;
   position: relative;
   color: white;
+  overflow: hidden;
 }
 
 .a-link{
